--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/svg+xml" href="./javascript-svgrepo-com.svg">
+    <link rel="icon" type="image/svg+xml" href="./svg/javascript-svgrepo-com.svg">
     <title>Typing-Game</title>
 </head>
 <body>
